--- a/Day1.ipynb
+++ b/Day1.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "100 Days Of Code - Log\n",
     "\n",
-    "Day 0: October 25, 2023 (Example 1)\n",
+    "Day 0: October 25, 2023 \n",
     "\n",
     "**Today's Progress**: \n",
     "1. Today I've learned few concepts of function & f string literals and string methods like split, upper, lower and there use cases.\n",
